--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ git+https://github.com/openai/whisper.git
 mypy-extensions~=0.4.3
 pre-commit~=2.20.0
 pyTelegramBotAPI
+python-dotenv~=0.21.0
 rich
 sox
