--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 black~=22.3.0
-coloredlogs
 ffmpeg-python
 git+https://github.com/openai/whisper.git
+loguru
 mypy-extensions~=0.4.3
 pre-commit~=2.20.0
 pyTelegramBotAPI
