--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 black~=22.3.0
 coloredlogs
 ffmpeg-python
-git+https://github.com/openai/whisper.git
 mypy-extensions~=0.4.3
 pre-commit~=2.20.0
 pyTelegramBotAPI
 python-dotenv~=0.21.0
 rich
 sox
+wget
+whisper-cpp-python
